--- a/src/filpersonal_assets/assets/main.css
+++ b/src/filpersonal_assets/assets/main.css
@@ -17,6 +17,11 @@ section {
     align-items: baseline;
 }
 
+div {
+    text-align: center;
+    width: 100%;
+}
+
 #clickMeBtn {
     padding: 5px 20px;
     margin: 10px auto;
